styles.css
:root{
    --myBlue: #123698;
    --myAltBlue: #125098;
    --hoverLink: #6d8eb4;
}

.navBar{
    color: white;
    background-color: var(--myBlue);
    padding: 3px;
}
.navbar a{
    border: white;
    background-color: var(--myAltBlue);
    padding: 5px 7px;
    text-align: center;
    display: inline-block;
    font-size: 24px;
    margin: 4px 4px;
    border-style: groove;
    border-radius: 2px;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    -ms-border-radius: 2px;
    -o-border-radius: 2px;
}
.footer{
    color: white;
    background-color: var(--myBlue);
    padding: 3px;
}
.footer a{
    border: white;
    background-color: var(--myAltBlue);
    padding: 2px 3px;
    text-align: center;
    display: inline-block;
    font-size: 16px;
    margin: 4px 4px;
    border-radius: 2px;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    -ms-border-radius: 2px;
    -o-border-radius: 2px;
}
a:link{
    color: white;
}
a:visited{
    color: gray;
}
a:hover{
    color: var(--hoverLink)
}
img {
    max-width: 100%;
    height: auto;
    display: block;

    #frown{
        max-width: 20px;
        height: auto;
        display: block;
        float: left;
    }
}
hr{
    color: var(--myBlue);
    background-color: var(--myBlue);
}
h2{
    text-align: left;
    font-size: 24px;
}
h4{
    text-align: left;
    font-size: 18px;
    margin-bottom: 2px;
}
.experience p {
    margin-top: 2px;
}

